# xdiff

./: Cargo.toml  README.md
examples/: config.rs  similar.rs
fixtures/: test.yaml
src/: cli.rs  config.rs  lib.rs  main.rs
